clusters/rpi/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  labels:
    app.kubernetes.io/component: ingress
    app.kubernetes.io/name: longhorn-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: longhorn.mgsds.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-frontend
            port:
              number: 80
